--- a/configs/wifi/WCNSS_qcom_cfg.ini
+++ b/configs/wifi/WCNSS_qcom_cfg.ini
@@ -3,7 +3,6 @@
 
 # MaxLinkSpeed report mode
 gReportMaxLinkSpeed=0
-
 # Enable IMPS or not
 gEnableImps=1
 
@@ -461,12 +460,10 @@ gEdcaVoCwmin=2
 gEdcaViCwmin=2
 gEdcaBkCwmin=2
 gEdcaBeCwmin=2
-
 gEdcaVoCwmax=3
 gEdcaViCwmax=3
 gEdcaBkCwmax=3
 gEdcaBeCwmax=3
-
 gEdcaVoAifs=0
 gEdcaViAifs=0
 gEdcaBkAifs=0
@@ -474,10 +471,6 @@ gEdcaBeAifs=0
 
 #for P2P connection IOT issue
 gDisableP2PMacAddrSpoof=1
-
-
-
-
 
 #Sends ARP response frame to AP periodically in 30 seconds to notify STA's existence
 gStaKeepAlivePeriod=25
@@ -520,6 +513,12 @@ g11agNumTxChains=2
 
 #Threshold of STA kickout disconnect
 gDroppedPktDisconnectTh=2047
+
+#Sets RSSI preference for 5GHz over 2.4GHz AP
+gSelect5GHzMargin=7
+
+#Disable Multicast MAC Address List feature
+gMCAddrListEnable=0
 
 END
 
