--- a/configs/gps/gps.conf
+++ b/configs/gps/gps.conf
@@ -18,8 +18,6 @@ ERR_ESTIMATE=0
 
 #NTP server
 NTP_SERVER=time.izatcloud.net
-NTP_SERVER_2=2.android.pool.ntp.org
-NTP_SERVER_3=s2f.time.edu.cn
 
 #XTRA CA path
 XTRA_CA_PATH=/system/etc/security/cacerts
@@ -27,10 +25,10 @@ XTRA_CA_PATH=/system/etc/security/cacerts
 # DEBUG LEVELS: 0 - none, 1 - Error, 2 - Warning, 3 - Info
 #               4 - Debug, 5 - Verbose
 # If DEBUG_LEVEL is commented, Android's logging levels will be used
-DEBUG_LEVEL = 5
+DEBUG_LEVEL = 3
 
 # Intermediate position report, 1=enable, 0=disable
-INTERMEDIATE_POS=1
+INTERMEDIATE_POS=0
 
 # Below bit mask configures how GPS functionalities
 # should be locked when user turns off GPS on Settings
@@ -64,11 +62,11 @@ SUPL_VER=0x10000
 # ON_DEMAND_TIME = 0x10
 # GEOFENCE = 0x20
 # default = ON_DEMAND_TIME | MSA | MSB | SCHEDULING | GEOFENCE
-CAPABILITIES=0x31
+CAPABILITIES=0x37
 
 # Accuracy threshold for intermediate positions
 # less accurate positions are ignored, 0 for passing all positions
-ACCURACY_THRES=100
+# ACCURACY_THRES=5000
 
 ################################
 ##### AGPS server settings #####
@@ -207,3 +205,17 @@ MISSING_PULSE_TIME_DELTA = 900
 # This settings enables time uncertainty propagation
 # logic incase of missing PPS pulse
 PROPAGATION_TIME_UNCERTAINTY = 1
+
+#######################################
+#  APN / IP Type Configuration
+#  APN and IP Type to use for setting
+#  up WWAN call.
+#  Use below values for IP Type:
+#  v4 = 4
+#  v6 = 6
+#  v4v6 = 10
+#######################################
+# INTERNET_APN = abc.xyz
+# INTERNET_IP_TYPE = 4
+# SUPL_APN = abc.xyz
+# SUPL_IP_TYPE = 4
