--- a/configs/gps/izat.conf
+++ b/configs/gps/izat.conf
@@ -2,7 +2,7 @@
 # Log verbosity control for izat modules
 #########################################
 # OFF = 0, ERROR = 1, WARNING = 2, INFO = 3, DEBUG = 4, VERBOSE = 5
-IZAT_DEBUG_LEVEL = 2
+IZAT_DEBUG_LEVEL = 5
 
 ##################################################
 # Select WIFI Wait Timeout value in seconds for SUPL
@@ -54,12 +54,14 @@ OSNLP_ACTION = com.android.location.service.v3.NetworkLocationProvider
 # REGION_OSNLP_PACKAGE/REGION_OSNLP_ACTION:
 # These two values will be used as alternative
 # for particular region where default NLP is not functional.
-##vivo moyanqing modified
 REGION_OSNLP_PACKAGE = com.baidu.map.location
 REGION_OSNLP_ACTION = com.android.location.service.v3.NetworkLocationProvider
 
 # Threshold period for ZPP triggers
 ZPP_TRIGGER_THRESHOLD=60000
+# Accuracy threshold for ZPP positions
+# less accurate positions are ignored
+ZPP_ACCURACY_THRESHOLD=20000
 
 ###################################
 # GEOFENCE SERVICES
@@ -119,7 +121,7 @@ GTP_WAA=DISABLED
 # DISABLED
 # BASIC
 # PREMIUM
-SAP=PREMIUM
+SAP=BASIC
 
 #ODCPI valid modes:
 #DISABLED
@@ -215,7 +217,7 @@ HARDWARE_TYPE=all
 PROCESS_NAME=lowi-server
 PROCESS_ARGUMENT=
 PROCESS_STATE=ENABLED
-PROCESS_GROUPS=gps net_admin wifi inet qcom_diag
+PROCESS_GROUPS=gps net_admin wifi inet oem_2901
 PREMIUM_FEATURE=0
 IZAT_FEATURE_MASK=0xf303
 PLATFORMS=all
@@ -248,7 +250,7 @@ HARDWARE_TYPE=all
 PROCESS_NAME=slim_daemon
 PROCESS_ARGUMENT=
 PROCESS_STATE=ENABLED
-PROCESS_GROUPS=gps qcom_diag can
+PROCESS_GROUPS=gps oem_2901 can
 PREMIUM_FEATURE=1
 IZAT_FEATURE_MASK=0xf0
 PLATFORMS=all
@@ -266,12 +268,3 @@ PLATFORMS=all
 BASEBAND=all
 LEAN_TARGETS=DISABLED
 HARDWARE_TYPE=all
-
-##################################################
-# The name of process which launches XTRA client.
-# Default process name in software which launches
-# XTRA client is system-server. Uncomment the below
-# to set the desired process which will start the
-# XTRA client.
-##################################################
-# XC20_LAUNCH_PROCESS_NAME=garden_app
